--- a/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
+++ b/translation/fr/sekha/sutta/sn/sn55/sn55.7_translation-fr-sekha.json
@@ -54,7 +54,7 @@
   "sn55.7:8.3": "Et si je devais séparer un autre de ses amis avec des paroles médisantes, cela ne serait pas non plus agréable ni plaisant pour cette autre personne. Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre. Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?” Ayant considéré ceci, il s’abstient lui-même des paroles médisantes, il incite les autres à s’abstenir des paroles médisantes, et il fait l’éloge du fait de s’abstenir des paroles médisantes.",
   "sn55.7:8.4": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
   "sn55.7:9.1": "De plus, maîtres de maison, un noble disciple considère ceci :",
-  "sn55.7:9.2": "‘Si quelqu’un devait s’adresser à moi avec des paroles acerbes, cela ne me serait pas agréable ni plaisant.",
+  "sn55.7:9.2": "“Si quelqu’un devait s’adresser à moi avec des paroles acerbes, cela ne me serait pas agréable ni plaisant.",
   "sn55.7:9.3": "Et si je devais m’adresser à un autre avec des paroles acerbes, cela ne serait pas non plus agréable ni plaisant pour cette autre personne.",
   "sn55.7:9.4": "Les choses qui me sont désagréables et déplaisantes sont aussi désagréables et déplaisantes pour un autre. Comment pourrais-je infliger à un autre des choses qui me sont désagréables et déplaisantes ?’ Ayant considéré ceci, il s’abstient lui-même des paroles acerbes, il incite les autres à s’abstenir des paroles acerbes, et il fait l’éloge du fait de s’abstenir des paroles acerbes.",
   "sn55.7:9.5": "Ainsi, sa bonne conduite verbale est purifiée de trois manières.",
