--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -5,5 +5,6 @@
   "pli-tv-bu-pm:10.2": "the sort of stealing for which kings, having caught a thief, would beat, imprison, or banish him, saying, ‘You’re a bandit, you’re a fool, you’ve gone astray, you’re a thief’",
   "pli-tv-bu-pm:10.3": "—he too is expelled and excluded from the community. ",
   "pli-tv-bu-pm:11.0": "Expulsion 3. Killing",
+  "pli-tv-bu-pm:11.1": "If a monk intentionally kills a human being or seeks an instrument of death for him or praises death or incites someone to die, saying, ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
