--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -10,5 +10,6 @@
   "pli-tv-bu-pm:11.3": "thinking and intending thus, if he praises death in many ways or incites someone to die",
   "pli-tv-bu-pm:11.4": "—he too is expelled and excluded from the community. ",
   "pli-tv-bu-pm:12.0": "Expulsion 3. Superhuman Qualities",
+  "pli-tv-bu-pm:12.1": "If a monk falsely claims for himself a superhuman quality, a knowledge and vision worthy of the noble ones, saying, ‘This I know, this I see,’ ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
