--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -16,5 +16,6 @@
   "pli-tv-bu-pm:12.4": "he too is expelled and excluded from the community.",
   "pli-tv-bu-pm:13.1": "“Venerables, the four rules on expulsion have been recited. ",
   "pli-tv-bu-pm:13.2": "If a monk commits any one of them, he is no longer part of the community of monks. ",
+  "pli-tv-bu-pm:13.3": "As before, so after: he’s expelled and excluded from the community. ",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
