--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -19,5 +19,6 @@
   "pli-tv-bu-pm:13.3": "As before, so after: he’s expelled and excluded from the community. ",
   "pli-tv-bu-pm:13.4": "In regard to this I ask you, ‘Are you pure in this?’ ",
   "pli-tv-bu-pm:13.5": "A second time I ask, ‘Are you pure in this?’ ",
+  "pli-tv-bu-pm:13.6": "A third time I ask, ‘Are you pure in this?’ \n",
   "pli-tv-bu-pm:13.8": "The offenses entailing expulsion are finished. "
 }
