--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -32,5 +32,6 @@
   "pli-tv-bu-pm:20.1": "When a monk, by means of begging, builds a hut without a sponsoring owner and intended for himself, it is to be no more than twelve standard handspans long and seven wide inside. ",
   "pli-tv-bu-pm:20.2": "He must have monks approve a site where no harm will be done and which has space on all sides. ",
   "pli-tv-bu-pm:20.3": "If a monk, by means of begging, builds a hut on a site where harm will be done and which lacks space on all sides, or he does not have monks approve the site, or he exceeds the right size, he commits an offense entailing suspension. ",
-  "pli-tv-bu-pm:21.1": "When a monk builds a large dwelling with a sponsoring owner and intended for himself, "
+  "pli-tv-bu-pm:21.1": "When a monk builds a large dwelling with a sponsoring owner and intended for himself, ",
+  "pli-tv-bu-pm:21.2": "he must have monks approve a site where no harm will be done and which has space on all sides. "
 }
