--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -3,5 +3,5 @@
   "pli-tv-bi-pm:10.2": "the sort of stealing for which kings, having caught a thief, would beat, imprison, or banish her, saying, ‘You’re a bandit, you’re a fool, you’ve gone astray, you’re a thief’",
   "pli-tv-bi-pm:10.3": "—she is expelled and excluded from the community. ",
   "pli-tv-bi-pm:11.0": "Expulsion 3. Killing",
-  "pli-tv-bi-pm:11.1": "If a nun intentionally kills a human being or seeks an instrument of death for him or praises death or incites someone to die, saying, "
+  "pli-tv-bi-pm:11.1": "If a nun intentionally kills a human being or seeks an instrument of death for her or praises death or incites someone to die, saying, "
 }
