--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -5,5 +5,6 @@
   "pli-tv-bi-pm:11.0": "Expulsion 3. Killing",
   "pli-tv-bi-pm:11.1": "If a nun intentionally kills a human being or seeks an instrument of death for her or praises death or incites someone to die, saying, ",
   "pli-tv-bi-pm:11.2": "‘My friend, what’s the point of this miserable and difficult life? Death is better for you than life!’—",
-  "pli-tv-bi-pm:11.3": "thinking and intending thus, if she praises death in many ways or incites someone to die"
+  "pli-tv-bi-pm:11.3": "thinking and intending thus, if she praises death in many ways or incites someone to die",
+  "pli-tv-bi-pm:11.4": "—she too is expelled and excluded from the community. "
 }
