--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -1,4 +1,5 @@
 {
+  "pli-tv-bi-pm:9.0": "Expulsion 1. Sexual Intercourse",
   "pli-tv-bi-pm:9.1": "If a nun, willingly has sexual intercourse, even with a male animal, she is expelled and excluded from the community.",
   "pli-tv-bi-pm:10.1": "If a nun, intending to steal, takes from an inhabited area or from the wilderness what has not been given to him—",
   "pli-tv-bi-pm:10.2": "the sort of stealing for which kings, having caught a thief, would beat, imprison, or banish her, saying, ‘You’re a bandit, you’re a fool, you’ve gone astray, you’re a thief’",
