--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -15,5 +15,6 @@
   "pli-tv-bi-pm:12.2": "but after some time—whether she is questioned or not, but having committed the offense and seeking purification—should say: ‘Not knowing I said that I know, not seeing that I see; what I said was empty and false,’ then, ",
   "pli-tv-bi-pm:12.3": "except if it is due to overestimation, ",
   "pli-tv-bi-pm:12.4": "she too is expelled and excluded from the community. ",
-  "pli-tv-bi-pm:17.1": "“Venerables, the eight rules on expulsion have been recited. "
+  "pli-tv-bi-pm:17.1": "“Venerables, the eight rules on expulsion have been recited. ",
+  "pli-tv-bi-pm:17.2": "If a nun commits any one of them, he is no longer part of the community of monks. "
 }
