--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -16,5 +16,6 @@
   "pli-tv-bi-pm:12.3": "except if it is due to overestimation, ",
   "pli-tv-bi-pm:12.4": "she too is expelled and excluded from the community. ",
   "pli-tv-bi-pm:17.1": "“Venerables, the eight rules on expulsion have been recited. ",
-  "pli-tv-bi-pm:17.2": "If a nun commits any one of them, he is no longer part of the community of nuns. "
+  "pli-tv-bi-pm:17.2": "If a nun commits any one of them, he is no longer part of the community of nuns. ",
+  "pli-tv-bi-pm:17.3": "As before, so after: she’s expelled and excluded from the community. "
 }
