--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -20,6 +20,7 @@
   "pli-tv-bi-pm:15.1": "If a nun takes sides with a monk who has been ejected by a unanimous Sangha—in accordance with the rule, the Monastic Law, and the Teacher’s instruction—and who is disrespectful, who has not made amends, and who has not made friends, the nuns should correct her like this: ",
   "pli-tv-bi-pm:15.2": "‘Venerable, this monk has been ejected by a unanimous Sangha in accordance with the rule, the Monastic Law, and the Teacher’s instruction. He’s disrespectful, hasn’t made amends, and hasn’t made friends. Venerable, don’t take sides with this monk.’ ",
   "pli-tv-bi-pm:15.3": "If that nun continues as before, the nuns should press her up to three times to make her stop. ",
+  "pli-tv-bi-pm:15.4": "If she then stops, all is well.",
   "pli-tv-bi-pm:17.1": "“Venerables, the eight rules on expulsion have been recited. ",
   "pli-tv-bi-pm:17.2": "If a nun commits any one of them, he is no longer part of the community of nuns. ",
   "pli-tv-bi-pm:17.3": "As before, so after: she’s expelled and excluded from the community. ",
