--- a/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bi-pm_translation-en-pasanna.json
@@ -42,5 +42,6 @@
   "pli-tv-bi-pm:26.1": "If a nun who is angry and displeased groundlessly charges a nun with an offense entailing expulsion, aiming to make her leave the monastic life, ",
   "pli-tv-bi-pm:26.2": "and then after some time, whether she is questioned or not, it is clear that the legal issue is groundless, and she admits to her ill will, she commits an offense entailing suspension. ",
   "pli-tv-bi-pm:27.1": "“If a nun who is angry and displeased, uses an unrelated legal issue as a pretext to charge a nun with an offense entailing expulsion, aiming to make her leave the monastic life,”\n",
-  "pli-tv-bi-pm:27.2": "and then after some time, whether she is questioned or not, it is clear that the legal issue is unrelated and was used as pretext, and she admits to her ill will, she commits an offense entailing suspension. "
+  "pli-tv-bi-pm:27.2": "and then after some time, whether she is questioned or not, it is clear that the legal issue is unrelated and was used as pretext, and she admits to her ill will, she commits an offense entailing suspension. ",
+  "pli-tv-bi-pm:28.1": "If a nun says in anger, "
 }
