--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -46,5 +46,6 @@
   "pli-tv-bu-pm:24.5": "If he then stops, all is well.",
   "pli-tv-bu-pm:24.6": "he commits an offense entailing suspension. ",
   "pli-tv-bu-pm:25.1": "That monk may have one, two, or three monks who side with him and support him, and they may say, ",
-  "pli-tv-bu-pm:25.2": "“Venerables, don’t correct this monk. "
+  "pli-tv-bu-pm:25.2": "“Venerables, don’t correct this monk. ",
+  "pli-tv-bu-pm:25.3": "He speaks in accordance with the Teaching and the training. "
 }
