--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -50,5 +50,6 @@
   "pli-tv-bu-pm:25.3": "He speaks in accordance with the Teaching and the training. ",
   "pli-tv-bu-pm:25.4": "And he speaks with our consent and approval. He knows about us and speaks for us, and we approve of this.” ",
   "pli-tv-bu-pm:25.5": "The monks should correct those monks like this:",
-  "pli-tv-bu-pm:25.6": "'No, Venerables, "
+  "pli-tv-bu-pm:25.6": "'No, Venerables, ",
+  "pli-tv-bu-pm:25.7": "this monk speaks contrary to the Teaching and the training. "
 }
