--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -54,5 +54,6 @@
   "pli-tv-bu-pm:25.7": "this monk speaks contrary to the Teaching and the training. ",
   "pli-tv-bu-pm:25.8": "And don’t consent to schism in the Sangha. ",
   "pli-tv-bu-pm:25.9": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.' ",
-  "pli-tv-bu-pm:25.10": "If those monks still continue as before, the monks should press them up to three times to make them stop. "
+  "pli-tv-bu-pm:25.10": "If those monks still continue as before, the monks should press them up to three times to make them stop. ",
+  "pli-tv-bu-pm:25.11": "If they then stops, all is well."
 }
