--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -56,5 +56,6 @@
   "pli-tv-bu-pm:25.9": "Stay with the Sangha, for a united Sangha—in concord, in harmony, having a joint recitation—is at ease.' ",
   "pli-tv-bu-pm:25.10": "If those monks still continue as before, the monks should press them up to three times to make them stop. ",
   "pli-tv-bu-pm:25.11": "If they then stops, all is well.",
-  "pli-tv-bu-pm:25.12": "they commits an offense entailing suspension. "
+  "pli-tv-bu-pm:25.12": "they commits an offense entailing suspension. ",
+  "pli-tv-bu-pm:26.1": "If a monk is difficult to correct, and he makes himself incorrigible when legitimately corrected by the monks concerning the training rules that are recited, saying, "
 }
