--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.1_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.1_translation-lt-piyadassi.json
@@ -16,7 +16,7 @@
   "sn12.1:2.2": "Sąlygoti neišmanymo, vienuoliai, yra valingi veiksmai. ",
   "sn12.1:2.3": "Sąlygota valingų veiksmų yra sąmonė. ",
   "sn12.1:2.4": "Sąlygoti sąmonės yra protas ir materiali forma).",
-  "sn12.1:2.5": "Sąlygotos vardo ir pavidalo yra šešios patyrimo sritys. ",
+  "sn12.1:2.5": "Sąlygotos proto ir materialios formos yra šešios patyrimo sritys.",
   "sn12.1:2.6": "Sąlygotas šešių patyrimo sričių yra sąlytis. ",
   "sn12.1:2.7": "Sąlygotas sąlyčio yra jausmo tonas. ",
   "sn12.1:2.8": "Sąlygotas jausmo tono yra troškimas. ",
