--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.1_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.1_translation-lt-piyadassi.json
@@ -28,7 +28,7 @@
   "sn12.1:2.14": "Tai, vienuoliai, vadinama sąlygotąja kilme. ",
   "sn12.1:3.1": "Dėl visiško neišmanymo išblėsimo ir baigties baigiasi valingi veiksmai. ",
   "sn12.1:3.2": "Dėl valingų veiksmų baigties baigiasi sąmonė. ",
-  "sn12.1:3.3": "Dėl sąmonės baigties baigiasi vardas ir pavidalas. ",
+  "sn12.1:3.3": "Dėl sąmonės baigties baigiasi protas ir materiali forma.",
   "sn12.1:3.4": "Dėl vardo ir pavidalo baigties baigiasi šešios patyrimo sritys. ",
   "sn12.1:3.5": "Dėl šešių patyrimo sričių baigties baigiasi sąlytis. ",
   "sn12.1:3.6": "Dėl sąlyčio baigties baigiasi jausmo tonas. ",
