--- a/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
+++ b/translation/en/pasanna/vinaya/pli-tv-bu-pm_translation-en-pasanna.json
@@ -62,5 +62,6 @@
   "pli-tv-bu-pm:26.3": "Please refrain from correcting me,” ",
   "pli-tv-bu-pm:26.4": "then the monks should correct him like this: ",
   "pli-tv-bu-pm:26.5": "'Be easy to correct, Venerable, not incorrigible. ",
-  "pli-tv-bu-pm:26.6": "And please give legitimate correction to the monks, and the monks will do the same to you. "
+  "pli-tv-bu-pm:26.6": "And please give legitimate correction to the monks, and the monks will do the same to you. ",
+  "pli-tv-bu-pm:26.7": "For it’s in this way that the Buddha’s community has grown, that is, through mutual correction and mutual clearing of offenses.'"
 }
