--- a/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
+++ b/translation/lt/piyadassi/sutta/sn/sn12/sn12.2_translation-lt-piyadassi.json
@@ -10,7 +10,7 @@
   "sn12.2:2.1": "„Ir kokia, vienuoliai, yra sąlygotoji kilmė?",
   "sn12.2:2.2": "Sąlygoti neišmanymo, vienuoliai, yra valingi veiksmai.",
   "sn12.2:2.3": "Sąlygota valingų veiksmų yra sąmonė.",
-  "sn12.2:2.4": "Sąlygoti sąmonės yra vardas ir pavidalas (protas ir materija).",
+  "sn12.2:2.4": "Sąlygoti sąmonės yra protas ir materiali forma.",
   "sn12.2:2.5": "Sąlygotos vardo ir pavidalo yra šešios patyrimo sritys.",
   "sn12.2:2.6": "Sąlygotas šešių patyrimo sričių yra sąlytis.",
   "sn12.2:2.7": "Sąlygotas sąlyčio yra jausmo tonas.",
