--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -1,4 +1,5 @@
 {
   "mn93:0.1": "Mittlere Lehrreden 93 ",
-  "mn93:0.2": "Mit Assalāyana "
+  "mn93:0.2": "Mit Assalāyana ",
+  "mn93:1.1": "So habe ich es gehört: "
 }
