--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -2,5 +2,6 @@
   "mn93:0.1": "Mittlere Lehrreden 93 ",
   "mn93:0.2": "Mit Assalāyana ",
   "mn93:1.1": "So habe ich es gehört: ",
-  "mn93:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. "
+  "mn93:1.2": "Einmal hielt sich der Buddha bei Sāvatthī in Jetas Wäldchen auf, dem Kloster des Anāthapiṇḍika. ",
+  "mn93:2.1": "Damals befanden sich etwa fünfhundert Brahmanen aus einem anderen Land wegen einer geschäftlichen Angelegenheit in Sāvatthī. "
 }
