--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -6,5 +6,6 @@
   "mn93:2.1": "Damals befanden sich etwa fünfhundert Brahmanen aus einem anderen Land wegen einer geschäftlichen Angelegenheit in Sāvatthī. ",
   "mn93:2.2": "Da dachten diese Brahmanen: ",
   "mn93:2.3": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. ",
-  "mn93:2.4": "Wer ist in der Lage, mit ihm darüber zu diskutieren?“ "
+  "mn93:2.4": "Wer ist in der Lage, mit ihm darüber zu diskutieren?“ ",
+  "mn93:3.1": "Nun befand sich zu dieser Zeit der Brahmanenschüler Assalāyana in Sāvatthī. Er war jung, sein Kopf frisch geschoren, er war sechzehn Jahre alt. Er hatte die drei Veden gemeistert, zusammen mit ihrem Wortschatz, den Riten, den Lauten und der Ableitung der Wörter sowie dem Testament als fünftem. Er kannte die Sprachwissenschaft und die Grammatik und war mit der Kosmologie und mit den Kennzeichen eines großen Mannes vertraut. "
 }
