--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -10,5 +10,6 @@
   "mn93:3.1": "Nun befand sich zu dieser Zeit der Brahmanenschüler Assalāyana in Sāvatthī. Er war jung, sein Kopf frisch geschoren; er war sechzehn Jahre alt. Er hatte die drei Veden gemeistert, zusammen mit ihrem Wortschatz, den Riten, den Lauten und der Ableitung der Wörter sowie dem Testament als fünftem. Er kannte die Sprachwissenschaft und die Grammatik und war mit der Kosmologie und mit den Kennzeichen eines großen Mannes vertraut. ",
   "mn93:3.2": "Da dachten diese Brahmanen: ",
   "mn93:3.4": "„Dieser Assalāyana ist in der Lage, mit dem Asketen Gotama über diese Sache zu diskutieren.“ ",
-  "mn93:4.1": "Da begaben sie sich zu Assalāyana und sagten zu ihm: "
+  "mn93:4.1": "Da begaben sie sich zu Assalāyana und sagten zu ihm: ",
+  "mn93:4.2": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. "
 }
