--- a/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
+++ b/translation/sr/brankokovacevic/sutta/dn/dn16_translation-sr-brankokovacevic.json
@@ -150,5 +150,6 @@
   "dn16:1.15.4": "I tako Blaženi, praćen velikom grupom monaha, stiže u Nāḷandu.",
   "dn16:1.15.5": "Tu se smestio u Pāvārikinom mangovom gaju.",
   "dn16:1.16.0": "4. Sāriputtin lavovski rik",
-  "dn16:1.16.1": "Tu poštovani Sāriputta dođe do Blaženog, pokloni mu se i sede sa strane. Dok je tako sedeo, ovako reče Blaženom:"
+  "dn16:1.16.1": "Tu poštovani Sāriputta dođe do Blaženog, pokloni mu se i sede sa strane. Dok je tako sedeo, ovako reče Blaženom:",
+  "dn16:1.16.2": "„Ah, Blaženi, ja ovako verujem:"
 }
