--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -12,5 +12,6 @@
   "mn93:3.4": "„Dieser Assalāyana ist in der Lage, mit dem Asketen Gotama über diese Sache ein Streitgespräch zu führen.“ ",
   "mn93:4.1": "Da begaben sie sich zu Assalāyana und sagten zu ihm: ",
   "mn93:4.2": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. ",
-  "mn93:4.3": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber.“ "
+  "mn93:4.3": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber.“ ",
+  "mn93:4.4": "Daraufhin sagte Assalāyana zu ihnen: "
 }
