--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -13,5 +13,6 @@
   "mn93:4.1": "Da begaben sie sich zu Assalāyana und sagten zu ihm: ",
   "mn93:4.2": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. ",
   "mn93:4.3": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber.“ ",
-  "mn93:4.4": "Daraufhin sagte Assalāyana zu ihnen: "
+  "mn93:4.4": "Daraufhin sagte Assalāyana zu ihnen: ",
+  "mn93:4.5": "„Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. "
 }
