--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -14,5 +14,6 @@
   "mn93:4.2": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. ",
   "mn93:4.3": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber.“ ",
   "mn93:4.4": "Daraufhin sagte Assalāyana zu ihnen: ",
-  "mn93:4.5": "„Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. "
+  "mn93:4.5": "„Man sagt, der Asket Gotama sei einer, der nach Grundsätzen spricht. ",
+  "mn93:4.6": "Aber mit denen, die nach Grundsätzen sprechen, ist es schwer, ein Streitgespräch zu führen. "
 }
