--- a/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
+++ b/translation/de/sabbamitta/sutta/mn/mn93_translation-de-sabbamitta.json
@@ -19,5 +19,6 @@
   "mn93:4.7": "Ich bin nicht in der Lage, mit dem Asketen Gotama über diese Sache ein Streitgespräch zu führen.“ ",
   "mn93:4.8": "Zum zweiten Mal sagten diese Brahmanen zu ihm: ",
   "mn93:4.9": "„Dieser Asket Gotama plädiert für die Läuterung aller vier Kasten. ",
-  "mn93:4.10": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber. "
+  "mn93:4.10": "Bitte, Herr Assalāyana, führe mit dem Asketen Gotama ein Streitgespräch darüber. ",
+  "mn93:4.11": "Denn du hast als Wanderer gelebt.“ "
 }
